# client

./: pgenie-client.cabal  stack.yaml
.github/workflows/: debug.yaml  on-push-to-master.yaml
curly-library/: Curly.hs
curly-library/Curly/: CurlhsExtras.hs
debug/: Main.hs
e2e-test/: Main.hs
