cabal-version: 3.0

name: pgenie-client
synopsis: Pgenie service client lib
description:
  A facade over lean-http-client specializing only on the ops
  supported by the Pgenie API server.
version: 0.1
build-type: Simple

common language-settings
  default-extensions: ApplicativeDo, Arrows, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyCase, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, LambdaCase, LiberalTypeSynonyms, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010

library
  import: language-settings
  hs-source-dirs: library
  exposed-modules:
    Pgenie.Client
  build-depends:
    attoparsec,
    cereal,
    coalmine,
    domain,
    domain-aeson,
    domain-optics,
    directory,
    http-client,
    http-client-tls,
    lean-http-client,
    pgenie-protocol,
    rerebase,
    text-builder-dev,
    yaml-unscrambler,

test-suite test
  import: language-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    coalmine,
    pgenie-client,
    rerebase,
