cabal-version: 3.0

name: pgenie-client
version: 0.1

synopsis: Pgenie service client lib
description:
  A facade over lean-http-client specializing only on the ops
  supported by the Pgenie API server.

common base-settings
  default-extensions: ApplicativeDo, Arrows, BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, DuplicateRecordFields, EmptyCase, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, HexFloatLiterals, LambdaCase, LiberalTypeSynonyms, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, NumericUnderscores, OverloadedLabels, OverloadedStrings, PatternGuards, PatternSynonyms, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances, ViewPatterns
  default-language: Haskell2010
  build-depends:
    attoparsec,
    cereal,
    coalmine,
    curly,
    domain,
    domain-aeson,
    domain-optics,
    directory,
    lean-http-client,
    pgenie-protocol,
    rerebase,
    text-builder-dev,
    yaml-unscrambler,

common test-settings
  import: base-settings
  build-depends:
    pgenie-client,

common executable-settings
  import: base-settings
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"
  build-depends:
    pgenie-client,

library
  import: base-settings
  hs-source-dirs: library
  exposed-modules:
    Pgenie.Client

test-suite test
  import: test-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs

test-suite e2e-test
  import: executable-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: e2e-test
  main-is: Main.hs
